[tool.poetry]
name = "nonebot-plugin-status"
version = "0.8.0"
description = "Check your server status (CPU, Memory, Disk Usage) via nonebot"
license = "MIT"
authors = ["yanyongyu <yyy@nonebot.dev>"]
readme = "README.md"
homepage = "https://github.com/nonebot/plugin-status"
repository = "https://github.com/nonebot/plugin-status"
documentation = "https://github.com/nonebot/plugin-status#readme"
keywords = ["nonebot", "nonebot2", "server", "status"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.7.2"
Jinja2 = "^3.0.0"
humanize = "^4.0.0"
nonebot2 = "^2.2.0"
nonebot-adapter-onebot = { version = "^2.0.0-beta.1", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
isort = "^5.10.1"
black = "^24.0.0"
nonemoji = "^0.1.3"
pre-commit = "^3.3.0"

[tool.poetry.extras]
onebot = ["nonebot-adapter-onebot"]

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "UP037"]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
